--- a/src/global.css
+++ b/src/global.css
@@ -8,10 +8,14 @@
     --gray-800: #202024;
     --gray-900: #121214;
 
+    --green-300: #00B37E;
     --green-500: #00875f;
+    
+}
 
-
-
+:focus {
+    outline: transparent;
+    box-shadow: 0 0 0 2px var(--green-500);
 }
 
 *{
@@ -27,7 +31,7 @@ body {
 }
 
 body, input, textarea, button {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Inter', sans-serif;
     font-weight: 400;
     font-size: 1rem;
 }
